--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="films">
       <mat-grid-tile *ngFor="let film of films">
         <mat-card class="example-card">
-          <img mat-card-image [src]="film.id | toFirebaseImage" alt="Photo of a Shiba Inu">
+          <img mat-card-image [src]="film.id | toFirebaseImage">
           <mat-card-title>{{ film.title }}</mat-card-title>
           <mat-card-content>
             <p>
@@ -10,7 +10,7 @@
             </p>
           </mat-card-content>
           <mat-card-actions>
-            <button mat-button routerLink="/details/">
+            <button mat-button [routerLink]="'/details/' + film.id">
               Details
             </button>
           </mat-card-actions>
