--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
+<mat-form-field appearance="legacy" style="width:100%;">
+  <mat-label>Search</mat-label>
+  <input matInput placeholder="Search"
+  #searchBox id="searchBox" (input)="onSearchChange(searchBox.value)">
+  <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+</mat-form-field>
+
 <mat-grid-list cols="4" rowHeight="500px">
     <div *ngIf="films">
       <mat-grid-tile *ngFor="let film of films">
