--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <mat-form-field appearance="legacy" style="width:100%;">
   <mat-label>Search</mat-label>
-  <input matInput placeholder="Search"
-  #searchBox id="searchBox" (input)="onSearchChange(searchBox.value)">
+  <input matInput placeholder="Search" [(ngModel)]="searchKeyword">
   <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
 </mat-form-field>
 
 <mat-grid-list cols="4" rowHeight="500px">
     <div *ngIf="films">
-      <mat-grid-tile *ngFor="let film of films">
+      <mat-grid-tile *ngFor="let film of films | filter: searchKeyword">
         <mat-card class="example-card">
           <img mat-card-image [src]="film.id | toFirebaseImage">
           <mat-card-title>{{ film.title }}</mat-card-title>
